--- a/java-wrapper/src/main/resources/config.properties
+++ b/java-wrapper/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 #add your api key here
-thingspeak.api.key = 
-csv.path = /home/pi/maverick/maverick.csv
+thingspeak.api.key = QWE123
+
+csv.path = ./maverick.csv
+maverick.command = ./maverick
